--- a/class-2/class-2.csproj
+++ b/class-2/class-2.csproj
@@ -60,12 +60,6 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmArray.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmArray.designer.cs">
-      <DependentUpon>frmArray.cs</DependentUpon>
-    </Compile>
     <Compile Include="FrmAtm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -128,14 +122,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Truck.cs" />
     <EmbeddedResource Include="CarApp.resx">
       <DependentUpon>CarApp.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmArray.resx">
-      <DependentUpon>frmArray.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmAtm.resx">
       <DependentUpon>FrmAtm.cs</DependentUpon>
